# blog

./: .gitignore  404.html  CNAME  Dockerfile  Gemfile  README.markdown  README.md  Rakefile  _config.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: deploy-blog.yml
blog/: index.html
blog/2000/: index.html
blog/2001/: index.html
blog/2002/: index.html
blog/2003/: index.html
blog/2004/: index.html
blog/2005/: index.html
blog/2006/: index.html
blog/2009/: index.html
blog/2010/: index.html
blog/2013/: index.html
blog/2014/: index.html
blog/2015/: index.html
blog/2016/: index.html
blog/2017/: index.html
blog/2019/: index.html
blog/2022/: index.html
blog/2023/: index.html
docs/: index.md
docs/blog/: .authors.yml  index.md
overrides/partials/: comments.html  copyright.html
sass/: _partials.scss
sass/base/: _theme.scss  _typography.scss  _utilities.scss
sass/custom/: _layout.scss  _styles.scss  _tables.scss
sass/partials/: _blog.scss  _header.scss  _navigation.scss  _sharing.scss  _syntax.scss  _thankyou.scss
search/: search_index.json
source/: index.html
source/_includes/: google_analytics.html  head.html  navigation.html
source/_layouts/: post.html
source/_posts/: 2000-04-15-hipoteza-gai.markdown  2001-03-15-questions-without-answers.markdown  2001-05-15-jak-poznaje-swiat.markdown  2002-04-15-drodzy-bracia-solipsysci.markdown  2003-02-16-wojna-cywilizacji.markdown  2003-03-11-glowa-toniego-blaira.markdown  2003-03-27-halliburton.markdown  2003-03-30-p2p.markdown  (+128 more)
(+319 files in other folders)
