[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Michal Karzynski <github@karzyn.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.41"
pymdown-extensions = "^10.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
